// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Renders correctly with defaults 1`] = `
<button
  className="MuiButtonBase-root MuiTab-root brew-Tab MuiTab-textColorInherit brew-Tab--textColorInherit"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="tab"
  tabIndex={0}
  type="button"
>
  <span
    className="MuiTab-wrapper brew-Tab__wrapper"
  >
    <p
      className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-body1 brew-Typography--align-inherit brew-Tab__label MuiTypography-body1"
    >
      
    </p>
  </span>
</button>
`;

exports[`Tab Renders correctly with property variants 1`] = `
Array [
  <button
    className="MuiButtonBase-root MuiTab-root brew-Tab MuiTab-textColorInherit brew-Tab--textColorInherit"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiTab-wrapper brew-Tab__wrapper"
    >
      <p
        className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-body1 brew-Typography--align-inherit brew-Tab__label MuiTypography-body1"
      >
        label 1
      </p>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiTab-root brew-Tab MuiTab-textColorInherit brew-Tab--textColorInherit"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiTab-wrapper brew-Tab__wrapper"
    >
      <p
        className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-body1 brew-Typography--align-inherit brew-Tab__label MuiTypography-body1"
      >
        label 2
      </p>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiTab-root brew-Tab MuiTab-textColorInherit brew-Tab--textColorInherit MuiTab-labelIcon brew-Tab--labelIcon"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiTab-wrapper brew-Tab__wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root brew-Icon brew-Icon--color-inherit brew-Icon--size-inherit brew-Tab__icon MuiIcon-fontSizeInherit"
      >
        add_circle
      </i>
      <p
        className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-body1 brew-Typography--align-inherit brew-Tab__label MuiTypography-body1"
      >
        label 1
      </p>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiTab-root brew-Tab MuiTab-textColorInherit brew-Tab--textColorInherit MuiTab-labelIcon brew-Tab--labelIcon"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="tab"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiTab-wrapper brew-Tab__wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root brew-Icon brew-Icon--color-inherit brew-Icon--size-inherit brew-Tab__icon MuiIcon-fontSizeInherit"
      >
        add_circle
      </i>
      <p
        className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-body1 brew-Typography--align-inherit brew-Tab__label MuiTypography-body1"
      >
        label 1
      </p>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>,
  <button
    className="MuiButtonBase-root MuiTab-root brew-Tab MuiTab-textColorInherit brew-Tab--textColorInherit Mui-disabled brew-Tab--disabled MuiTab-labelIcon brew-Tab--labelIcon Mui-disabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="tab"
    tabIndex={-1}
    type="button"
  >
    <span
      className="MuiTab-wrapper brew-Tab__wrapper"
    >
      <i
        aria-hidden={true}
        className="material-icons MuiIcon-root brew-Icon brew-Icon--color-inherit brew-Icon--size-inherit brew-Tab__icon MuiIcon-fontSizeInherit"
      >
        add_circle
      </i>
      <p
        className="MuiTypography-root brew-Typography brew-Typography--display-initial brew-Typography--variant-body1 brew-Typography--align-inherit brew-Tab__label MuiTypography-body1"
      >
        label 1
      </p>
    </span>
  </button>,
]
`;
